apiproject/nodeappdeployment/nodeappsvc.yaml
apiVersion: v1
kind: Service
metadata:
  name: avengers-api-service
  namespace: avengers
spec:
  selector:
    app: avengers-api
  ports:
  - port: 80
    targetPort: 3000
